[gd_scene load_steps=4 format=3 uid="uid://cblabk46p0l5w"]

[ext_resource type="Texture2D" uid="uid://57p57ogy8jry" path="res://Assets/bullet_1.png" id="1_iuegd"]
[ext_resource type="Script" path="res://bullet.gd" id="1_sqfuk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhxnh"]
size = Vector2(18, 7)

[node name="Bullet" type="CharacterBody2D"]
script = ExtResource("1_sqfuk")
SPEED = null
LIFESPAN = null

[node name="BulletCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_xhxnh")

[node name="Bullet1" type="Sprite2D" parent="."]
texture = ExtResource("1_iuegd")

[node name="LifespanTimer" type="Timer" parent="."]
